Implemented a secure way to encrypt and store user passwords in the database using Bcrypt

--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -210,12 +210,12 @@ button {
     background: none;
     padding: 0;
     border: none;
-    color: #62CB31;
+    color: #4b8df7;
     text-decoration: none;
 }
 
 button:hover {
-    color: #4EB722;
+    color: #477eeb;
     text-decoration: underline;
     cursor: pointer;
 }
