--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -52,12 +52,12 @@ h2 {
 }
 
 a {
-    color: #8FD2F9;
+    color: #62CB31;
     text-decoration: none;
 }
 
 a:hover {
-    color: #367B99;
+    color: #4EB722;
     text-decoration: underline;
 }
 
@@ -143,7 +143,7 @@ nav a.live:after {
 }
 
 a.button, input[type="submit"] {
-    background-color: #8FD2F9;
+    background-color: #62CB31;
     border-radius: 3px;
     color: #FFFFFF;
     padding: 18px 27px;
@@ -154,7 +154,7 @@ a.button, input[type="submit"] {
 }
 
 a.button:hover, input[type="submit"]:hover {
-    background-color: #367B99;
+    background-color: #4EB722;
     color: #FFFFFF;
     cursor: pointer;
     text-decoration: none;
@@ -210,12 +210,12 @@ button {
     background: none;
     padding: 0;
     border: none;
-    color: #4b8df7;
+    color: #62CB31;
     text-decoration: none;
 }
 
 button:hover {
-    color: #477eeb;
+    color: #4EB722;
     text-decoration: underline;
     cursor: pointer;
 }
@@ -281,12 +281,12 @@ table {
     background: white;
     border: 1px solid #E4E5E7;
     border-collapse: collapse;
-    width: 110%;
+    width: 100%;
 }
 
 td, th {
     text-align: left;
-    padding: 12px 21px;
+    padding: 9px 18px;
 }
 
 th:last-child, td:last-child {
