--- a/ui/html/components/nav.html
+++ b/ui/html/components/nav.html
@@ -3,14 +3,21 @@
   <div>
     <a href="/">Home</a>
     <!-- Add a link to the new form  -->
+    <!-- Toggle the link based on authentication status  -->
+    {{if .IsAuthenticated}}
     <a href="/snippet/create">Create Snippet</a>
+    {{end}}
   </div>
   <div>
-    <a href="/user/signup">Signup</a>
-    <a href="/user/login">Login</a>
-    <form action="/user/logout" method="post">
+    <!-- Toggle the links based on the authentication status  -->
+    {{if .IsAuthenticated}}
+    <form action="/user/logout" method="POST">
       <button>Logout</button>
     </form>
+    {{else}}
+    <a href="/user/signup">Signup</a>
+    <a href="/user/login">Login</a>
+    {{end}}
   </div>
 </nav>
 {{end}}
