--- a/ui/html/components/nav.html
+++ b/ui/html/components/nav.html
@@ -2,6 +2,8 @@
 <nav>
   <div>
     <a href="/">Home</a>
+    <!-- Add link to the About page. -->
+    <a href="/about">About</a>
     <!-- Add a link to the new form  -->
     <!-- Toggle the link based on authentication status  -->
     {{if .IsAuthenticated}}
